Favicon HREF Fix

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -23,7 +23,7 @@ const { url } = Astro;
 		<link
 			rel="icon"
 			type="image/svg+xml"
-			href="/favicon.svg"
+			href="/cpp-book/favicon.svg"
 		/>
 		<meta
 			name="generator"
