Enforce trailing slashes for GH Pages parity

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -36,7 +36,7 @@ const { url } = Astro;
 			url.pathname == "/" || url.pathname == "/cpp-book/" ? (
 				""
 			) : (
-				<a href="/cpp-book"> &lt;-- Back to index </a>
+				<a href="/cpp-book/"> &lt;-- Back to index </a>
 			)
 		}
 		<slot />
