Update Meta description

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -14,7 +14,7 @@ const { url } = Astro;
 		<meta charset="UTF-8" />
 		<meta
 			name="description"
-			content="Astro description"
+			content="A Simple site to learn C++"
 		/>
 		<meta
 			name="viewport"
