--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,247 +1,282 @@
 ---
+import { getNeighbors, urlBase } from "src/site";
 interface Props {
-	title: string;
+    title: string;
 }
 
 const { title } = Astro.props;
 
 const { url } = Astro;
+const neighbors = getNeighbors(url.pathname);
 ---
 
 <!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta
-			name="description"
-			content="A Simple site to learn C++"
-		/>
-		<meta
-			name="viewport"
-			content="width=device-width"
-		/>
-		<link
-			rel="icon"
-			type="image/svg+xml"
-			href="/cpp-book/favicon.svg"
-		/>
-		<meta
-			name="generator"
-			content={Astro.generator}
-		/>
-		<title>{title}</title>
-	</head>
-	<body>
-		{
-			url.pathname == "/" || url.pathname == "/cpp-book/" ? (
-				""
-			) : (
-				<a href="/cpp-book/"> &lt;-- Back to index </a>
-			)
-		}
-		<slot />
-	</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta
+            name="description"
+            content="A Simple site to learn C++"
+        />
+        <meta
+            name="viewport"
+            content="width=device-width"
+        />
+        <link
+            rel="icon"
+            type="image/svg+xml"
+            href="/cpp-book/favicon.svg"
+        />
+        <meta
+            name="generator"
+            content={Astro.generator}
+        />
+        <title>{title}</title>
+    </head>
+    <body>
+        {
+            url.pathname == "/" || url.pathname == "/cpp-book/" ? (
+                ""
+            ) : (
+                <a href={urlBase}> &lt;-- Back to index </a>
+            )
+        }
+        <slot />
+        <div>
+            {
+                url.pathname == "/" || url.pathname == "/cpp-book/" ? (
+                    <span />
+                ) : (
+                    <a href={neighbors.prev?.link}>
+                        &lt;-- {neighbors.prev?.name}
+                    </a>
+                )
+            }
+            <a href={neighbors.next?.link}>
+                {neighbors.next?.name} --&gt;
+            </a>
+        </div>
+    </body>
 </html>
 
 <style>
-	body {
-		padding: 0.5rem;
-		margin-top: 10px;
-	}
+    body {
+        padding: 0.5rem;
+        margin-top: 10px;
+    }
 
-	body > a {
-		text-decoration: none;
-		color: rgb(var(--accent));
-		position: absolute;
-		top: 10px;
-		left: 10px;
-		padding: 0.25rem 0.5rem;
-		border-bottom: 1px solid #5555;
-	}
+    body > div {
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+        padding-block: 2rem;
+    }
 
-	@media screen and (max-width: 800px) {
-		body {
-			grid-template-columns: 1fr;
-		}
-	}
+    body > div a {
+        padding: 0.25rem 0.5rem;
+        background-color: #5555;
+        color: black;
+    }
 
-	body div:first-child {
-		max-width: fit-content;
-	}
+    @media (prefers-color-scheme: dark) {
+        body > div a {
+            color: white;
+        }
+    }
+
+    body > a {
+        text-decoration: none;
+        color: rgb(var(--accent));
+        position: absolute;
+        top: 10px;
+        left: 10px;
+        padding: 0.25rem 0.5rem;
+        border-bottom: 1px solid #5555;
+    }
+
+    @media screen and (max-width: 800px) {
+        body {
+            grid-template-columns: 1fr;
+        }
+    }
+
+    body div:first-child {
+        max-width: fit-content;
+    }
 </style>
 <style is:global>
-	:root {
-		--accent: 136, 58, 234;
-		--accent-light: 224, 204, 250;
-		--accent-dark: 49, 10, 101;
-		--accent-gradient: linear-gradient(
-			45deg,
-			rgb(var(--accent)),
-			rgb(var(--accent-light)) 30%,
-			white 60%
-		);
+    :root {
+        --accent: 136, 58, 234;
+        --accent-light: 224, 204, 250;
+        --accent-dark: 49, 10, 101;
+        --accent-gradient: linear-gradient(
+            45deg,
+            rgb(var(--accent)),
+            rgb(var(--accent-light)) 30%,
+            white 60%
+        );
 
-		--button: 19, 21, 26;
-		--button-hover: 30, 32, 40;
-	}
+        --button: 19, 21, 26;
+        --button-hover: 30, 32, 40;
+    }
 
-	@media (prefers-color-scheme: dark) {
-		:root {
-			--button: 30, 32, 40;
-			--button-hover: 19, 21, 26;
-		}
-	}
+    @media (prefers-color-scheme: dark) {
+        :root {
+            --button: 30, 32, 40;
+            --button-hover: 19, 21, 26;
+        }
+    }
 
-	h1:target,
-	h2:target,
-	h3:target,
-	h4:target,
-	h5:target,
-	h6:target {
-		color: rgb(var(--accent));
-	}
+    h1:target,
+    h2:target,
+    h3:target,
+    h4:target,
+    h5:target,
+    h6:target {
+        color: rgb(var(--accent));
+    }
 
-	table {
-		border: 1px solid #5555;
-	}
+    table {
+        border: 1px solid #5555;
+    }
 
-	thead {
-		background-color: #f5f5f5;
-	}
+    thead {
+        background-color: #f5f5f5;
+    }
 
-	tr:nth-child(even) {
-		background-color: #f5f5f5;
-	}
+    tr:nth-child(even) {
+        background-color: #f5f5f5;
+    }
 
-	td,
-	th {
-		padding: 0.25rem;
-	}
+    td,
+    th {
+        padding: 0.25rem;
+    }
 
-	@media (prefers-color-scheme: dark) {
-		table {
-			border: 1px solid #999;
-		}
+    @media (prefers-color-scheme: dark) {
+        table {
+            border: 1px solid #999;
+        }
 
-		thead {
-			background-color: #333;
-		}
+        thead {
+            background-color: #333;
+        }
 
-		tr:nth-child(even) {
-			background-color: #222;
-		}
-	}
+        tr:nth-child(even) {
+            background-color: #222;
+        }
+    }
 
-	ol {
-		counter-reset: item;
-	}
+    ol {
+        counter-reset: item;
+    }
 
-	ol li {
-		display: block;
-	}
+    ol li {
+        display: block;
+    }
 
-	ol li:before {
-		content: counters(item, ".") " ";
-		counter-increment: item;
-	}
+    ol li:before {
+        content: counters(item, ".") " ";
+        counter-increment: item;
+    }
 
-	a {
-		color: rgb(var(--accent));
-		text-decoration: none;
-	}
+    a {
+        color: rgb(var(--accent));
+        text-decoration: none;
+    }
 
-	a:visited {
-		color: rgb(var(--accent-dark));
-	}
+    a:visited {
+        color: rgb(var(--accent-dark));
+    }
 
-	@media (prefers-color-scheme: dark) {
-		a:visited {
-			color: rgb(var(--accent-light));
-		}
-	}
+    @media (prefers-color-scheme: dark) {
+        a:visited {
+            color: rgb(var(--accent-light));
+        }
+    }
 
-	code:not(pre code) {
-		background-color: #e6e5e5;
-		padding: 0.2rem 0.3rem;
-		border-radius: 3px;
-	}
+    code:not(pre code) {
+        background-color: #e6e5e5;
+        padding: 0.2rem 0.3rem;
+        border-radius: 3px;
+    }
 
-	@media (prefers-color-scheme: dark) {
-		code:not(pre code) {
-			background-color: #22232b;
-		}
-	}
+    @media (prefers-color-scheme: dark) {
+        code:not(pre code) {
+            background-color: #22232b;
+        }
+    }
 
-	pre {
-		padding: 0.5rem 0.75rem;
-	}
-	html {
-		font-family: system-ui, sans-serif;
-		background-color: #fcfcfc;
-		color: black;
-	}
+    pre {
+        padding: 0.5rem 0.75rem;
+    }
+    html {
+        font-family: system-ui, sans-serif;
+        background-color: #fcfcfc;
+        color: black;
+    }
 
-	.code-extra {
-		position: relative;
-	}
+    .code-extra {
+        position: relative;
+    }
 
-	.code-extra > button {
-		opacity: 0;
-	}
+    .code-extra > button {
+        opacity: 0;
+    }
 
-	.code-extra:hover > button {
-		opacity: 1;
-	}
+    .code-extra:hover > button {
+        opacity: 1;
+    }
 
-	.copy-button {
-		padding: 0.25rem;
-		padding-right: 0.2rem;
-		width: fit-content;
-		height: fit-content;
-		position: absolute;
-		top: 10px;
-		right: 10px;
-		transition: opacity 0.2s;
-		background-color: rgb(19, 21, 26);
-		border-radius: 7px;
-		border: none;
-		box-shadow:
-			2px 2px 3px black,
-			-2px -2px 3px #4e4e4e;
-	}
+    .copy-button {
+        padding: 0.25rem;
+        padding-right: 0.2rem;
+        width: fit-content;
+        height: fit-content;
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        transition: opacity 0.2s;
+        background-color: rgb(19, 21, 26);
+        border-radius: 7px;
+        border: none;
+        box-shadow:
+            2px 2px 3px black,
+            -2px -2px 3px #4e4e4e;
+    }
 
-	.copy-button:hover {
-		background-color: rgb(30, 32, 40);
-	}
+    .copy-button:hover {
+        background-color: rgb(30, 32, 40);
+    }
 
-	.copy-button:active {
-		box-shadow:
-			2px 2px 3px black inset,
-			-2px -2px 3px #4e4e4e inset;
-	}
+    .copy-button:active {
+        box-shadow:
+            2px 2px 3px black inset,
+            -2px -2px 3px #4e4e4e inset;
+    }
 
-	@media (prefers-color-scheme: dark) {
-		html {
-			background: #13151a;
-			color: white;
-		}
-	}
+    @media (prefers-color-scheme: dark) {
+        html {
+            background: #13151a;
+            color: white;
+        }
+    }
 
-	blockquote {
-		border-left: 4px solid rgb(var(--accent));
-		padding-left: 1.5rem;
-		margin-inline: 0;
-	}
+    blockquote {
+        border-left: 4px solid rgb(var(--accent));
+        padding-left: 1.5rem;
+        margin-inline: 0;
+    }
 
-	code {
-		font-family:
-			Menlo,
-			Monaco,
-			Lucida Console,
-			Liberation Mono,
-			DejaVu Sans Mono,
-			Bitstream Vera Sans Mono,
-			Courier New,
-			monospace;
-	}
+    code {
+        font-family:
+            Menlo,
+            Monaco,
+            Lucida Console,
+            Liberation Mono,
+            DejaVu Sans Mono,
+            Bitstream Vera Sans Mono,
+            Courier New,
+            monospace;
+    }
 </style>
