--- a/src/styles/code.scss
+++ b/src/styles/code.scss
@@ -1,5 +1,6 @@
 pre {
     padding-inline: 5px;
+    padding-bottom: 10px;
     margin-block: 0;
 
     &.has-highlighted:not(.has-diff) {
@@ -9,8 +10,9 @@ pre {
             &.highlighted {
                 position: relative;
                 width: calc(100% + 0.75rem);
-                padding-left: 0.75rem;
-                margin-left: -0.75rem;
+                min-width: fit-content;
+                padding-left: calc(5px + 0.2rem);
+                margin-left: -5px;
             }
         }
     }
@@ -40,6 +42,10 @@ pre {
             }
         }
     }
+
+    code {
+        display: inline-block;
+    }
 }
 
 .code-extra {
@@ -55,8 +61,9 @@ pre {
 }
 
 code {
-    width: fit-content;
-    height: fit-content;
+    width: 100%;
+    min-width: fit-content;
+    min-height: fit-content;
     font-family:
         Menlo,
         Monaco,
@@ -108,6 +115,10 @@ code {
 
     .highlighted {
         background-color: #394047;
+
+        &.error {
+            background-color: rgba(244, 63, 94, 0.16);
+        }
     }
 }
 
